--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello World</h1>
+<html>
+    <head>
+        <title>Ian Cooper</title>
+    </head>
+
+    <body>
+
+        <h1>Hello</h1>
+
+        <p>Working on getting Jeckyll set up...</p>
+
+    </body>
+</html>
