--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@ permalink: 404.html
     <h1 class="page-title">{{ page.title }}</h1>
     <p class="lead">
         Oops, we've either misplaced that document or you've tried to navigate to somewhere that doesn't exist.
-        <a href="{{ site.baseurl }}">Head back home</a> to try finding it again.
+        <a href="/">Head back home</a> to try finding it again.
     </p>
 </div>
