--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@ title: Home
 
 <div class="pagination">
   {% if paginator.next_page %}
-    <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">&laquo; Older</a>
+    <a class="pagination-item older" href="/page{{paginator.next_page}}">&laquo; Older</a>
   {% else %}
     <span class="pagination-item older"><!-- &laquo; Older --></span>
   {% endif %}
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}">Newer &raquo;</a>
+      <a class="pagination-item newer" href="/">Newer &raquo;</a>
     {% else %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}page{{paginator.previous_page}}">Newer &raquo;</a>
+      <a class="pagination-item newer" href="/page{{paginator.previous_page}}">Newer &raquo;</a>
     {% endif %}
   {% else %}
     <span class="pagination-item newer"><!-- Newer &raquo; --></span>
