updated javascript includes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
     
     {% if post.scripts %}
         {% for script in post.scripts %}
-            <script type="text/javascript" src="{{ script }}"></script>
+            <script type="text/javascript" src="/assets/js/{{ script }}"></script>
         {% endfor %}
     {% endif %}
   </div>
